--- a/api/composer.json
+++ b/api/composer.json
@@ -29,7 +29,8 @@
         "symfony/serializer": "6.0.*",
         "symfony/twig-bundle": "6.0.*",
         "symfony/validator": "6.0.*",
-        "symfony/yaml": "6.0.*"
+        "symfony/yaml": "6.0.*",
+        "vich/uploader-bundle": "^1.19"
     },
     "require-dev": {
         "api-platform/schema-generator": "^4.0",
