--- a/api/composer.json
+++ b/api/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^7.0",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.0.*",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
