--- a/api/config/packages/api_platform.yaml
+++ b/api/config/packages/api_platform.yaml
@@ -2,15 +2,23 @@ api_platform:
     title: Hello API Platform
     version: 1.0.0
     mapping:
-        paths: ['%kernel.project_dir%/src/Entity']
+        paths: [ '%kernel.project_dir%/src/Entity' ]
     patch_formats:
-        json: ['application/merge-patch+json']
+        json: [ 'application/merge-patch+json' ]
     swagger:
-        versions: [3]
+        versions: [ 3 ]
     # Mercure integration, remove if unwanted
     mercure: ~
     # Good cache defaults for REST APIs
     defaults:
         stateless: true
         cache_headers:
-            vary: ['Content-Type', 'Authorization', 'Origin']
+            vary: [ 'Content-Type', 'Authorization', 'Origin' ]
+    http_cache:
+        invalidation:
+            enabled: true
+            varnish_urls: [ '%env(VARNISH_URL)%' ]
+        max_age: 0
+        shared_max_age: 3600
+        vary: [ 'Content-Type', 'Authorization', 'Origin' ]
+        public: true
